# smart-qa-agent-system

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  start-frontend.bat  start.bat  start.sh
.claude/skills/: project-readme-authoring.md
alembic/: env.py
alembic/versions/: 8f9d8bdcbf2f_initial_schema.py
app/: __init__.py  main.py
data/: consumable_catalog.json  diagnosis_tree.json  faq_consumables.json  faq_knowledge_base.json  faq_troubleshooting.json  router_keywords.json  test_faq.json
data/knowledge/01_product_specs/: xiaomi_competitor_compare.md  xiaomi_models.md
data/knowledge/02_user_manual/: xiaomi_setup_guide.md  xiaomi_top_faq.md
data/knowledge/03_maintenance/: xiaomi_maintenance_guide.md
data/knowledge/04_fault_troubleshooting/: 00_common_faults.txt  xiaomi_fault_codes.md
data/knowledge/05_scenario_guide/: xiaomi_real_painpoints.md  xiaomi_real_painpoints.txt
data/knowledge/06_smart_home/: xiaomi_mijia_iot.md
data/knowledge/07_after_sales/: 00_warranty_basics.md  00_warranty_basics.txt  xiaomi_warranty_policy.md
data/knowledge/consumables/: consumables_guide.md  x30pro_catalog.md
data/knowledge/fault_troubleshooting/: fault_guide.md
data/knowledge/user_manual/: X30_Pro_manual.md  faq.md
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  TODO.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/components/: CitationCard.vue  ErrorBanner.vue  ErrorCodeBadge.vue  IntentBadge.vue  LoginDialog.vue  MessageBubble.vue  Sidebar.vue  SkeletonMessage.vue  StatusPulse.vue  TypingIndicator.vue
frontend/src/composables/: useSSE.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  chat.ts
frontend/src/styles/: main.css
frontend/src/views/: AdminView.vue  ChatView.vue  ConsumablesView.vue  OrderTrackView.vue  ReportView.vue  TroubleshootView.vue
frontend/tests/api/: index.test.ts
frontend/tests/stores/: app.test.ts  chat.test.ts
scripts/: gen_all_faq.py  gen_cm.py  gen_faq_knowledge.py  gen_formats.py  gen_kb.py  gen_ts.py  rebuild_faq.py
src/agent/: graph.py  persona.py  state.py  state_utils.py
src/agent/agents/: __init__.py  action_agent.py  rag_agent.py  reflection.py  report_agent.py  router_agent.py
src/agent/guards/: __init__.py  loop_detector.py
src/agent/prompts/: __init__.py  cot_router.txt  loader.py
src/agent/tools/: device.py  mcp_client.py  onenet_adapter.py
src/app/: __init__.py  config.py  deps.py  web.py
src/app/api/: deps.py  stream_handler.py
src/app/scenarios/: __init__.py  consumables_scenario.py  qa_scenario.py  troubleshoot_scenario.py
src/database/: __init__.py  engine.py  postgres.py  redis.py
src/evaluation/: __init__.py  dataset.py  judge.py  metrics.py
src/knowledge/: bm25.py  faq_matcher.py  vector_store.py
src/memory/: __init__.py  cache.py  long_term.py  short_term.py  task_memory.py
src/models/: __init__.py  consumable.py  device.py  session.py  usage.py
src/observability/: __init__.py  logger.py  metrics.py  token_counter.py
src/rag/: __init__.py  chunking.py  citation.py  hyde.py  reranker.py  retrieval.py
src/scripts/: __init__.py  init_db.py  init_vector_store.py  onenet_simulator.py
src/security/: __init__.py  sensitive_filter.py
src/services/: __init__.py  cascade.py  chat_service.py  consumable_service.py  report_service.py  troubleshoot_service.py
src/smart_qa/: __init__.py  __main__.py  config.py  deps.py  di.py  exceptions.py  web.py
src/smart_qa/agent/: graph.py  persona.py  state.py  state_utils.py
src/smart_qa/api/: auth_deps.py  deps.py  (+1 more)
test_results/: EVALUATION_REPORT.md  TEST_REPORT.md  evaluation_metrics.json  test_summary.json
tests/: conftest.py  test_agent_behavior.py  test_agent_core.py  test_api_chat.py  test_api_knowledge.py  test_api_sessions.py  test_auth.py  test_bm25.py  test_cache.py  test_chunking.py  test_citation.py  test_consumable_service.py  test_database_integration.py  test_e2e_api.py  test_error_paths.py  test_evaluation_metrics.py  test_graph_e2e.py  test_imports.py  test_integration.py  test_knowledge_graph.py  test_loop_detector.py  test_metrics.py  test_performance.py  test_persona_boundary.py  test_prompts_persona_citation.py  test_rag_agent.py  test_rag_agent_enhanced.py  test_rate_limiter.py  test_reranker.py  test_retrieval.py  test_retrieval_cascade.py  test_retrieval_full.py  test_router.py  test_router_full.py  test_schemas.py  test_security.py  test_session_repository.py  test_smoke_imports.py  test_sse_stream.py  test_troubleshoot.py  (+1 more)
(+102 files in other folders)
