[project]
name = "smart-qa-agent-system"
version = "1.0.0"
description = "基于 LangGraph 的多 Agent 智能问答系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "QA Team" }
]
keywords = ["fastapi", "langgraph", "rag", "agent", "qa-system"]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Vector Store
    "pymilvus>=2.4.0",
    "sentence-transformers>=3.1.0",
    # Database
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    # Security
    "pyahocorasick>=2.1.0",
    # Observability (optional)
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    # Utils
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]
tracing = [
    "opentelemetry-exporter-otlp>=1.27.0",
    "tiktoken>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "uv>=0.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, etc.)
    "I",   # isort (import order)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
