[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-qa-agent-system"
version = "1.0.0"
description = "基于 LangGraph 的多 Agent 智能问答系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "QA Team" }
]
keywords = ["fastapi", "langgraph", "rag", "agent", "qa-system"]

dependencies = [
    # Core
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # LangGraph & LangChain
    "langgraph>=1.2.9",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-community>=0.4.2",
    # Vector Store
    "pymilvus>=2.6.12",     # 已使用 MilvusClient 新 API，兼容 3.x
    "sentence-transformers>=5.6.0",
    # Database
    "asyncpg>=0.31.0",
    "redis[hiredis]>=7.0.0", # ⚠️ 8.0 有 breaking change，升级前需迁移代码
    "sqlalchemy[asyncio]>=2.0.51",
    # Security
    "pyahocorasick>=2.3.1",
    # Observability (optional)
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.39.0,<1.43.0",
    "opentelemetry-sdk>=1.39.0,<1.43.0",
    # Utils
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
    # AI
    "pydantic-ai>=2.9.0",
    # Document parsing
    "pymupdf>=1.27.2",
]

[project.scripts]
smart-qa = "smart_qa.web:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["smart_qa*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
]
tracing = [
    "opentelemetry-exporter-otlp>=1.39.0,<1.43.0",
    "tiktoken>=0.13.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "uv>=0.10.12",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, etc.)
    "I",   # isort (import order)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
